refactor: 사용자 CRUD 1차 리팩토링
JWT 생성과 사용 시 오류가 발생하지 않는지 테스트